# nprpc

./: .clang-format  .clangd  .dockerignore  .env  .gitattributes  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  DOCKER_DEV_IMAGE.md  Dockerfile.debian-swift  Dockerfile.dev  Dockerfile.ubuntu-swift  LICENSE  Makefile  QUIC.md  README.md  SHARED_MEMORY_ARCHITECTURE.md  TODO.md  benchmark.txt  bt.sh  build-dev-image.sh  build_boost_clang17.sh  build_boost_debian.sh  build_boost_ubuntu.sh  configure.sh  configure_swift_clang17.sh  docker-build.sh  format_code.sh  gen_benchmark_idl.sh  gen_test_idl.sh  gen_udp_idl.sh  http-results.txt  justfile  kill_cpptools.sh  new_bench_results.txt  nginx_request_throttling_example_config.cfg  nprpc-swift.code-workspace  nprpc.sln  nprpc.vcxproj  (+16 more)
benchmark/: CMakeLists.txt  README.md  README_COMPARISON.md  results.txt
benchmark/http_shootout/: .gitignore  .settings  2026-03-27-http3-analysis.md  2026-03-27-http3-perf.txt  2026-03-27-http3-results.txt  2026-04-17-http-results-boringssl.txt  2026-04-17-http3-boringssl-perf.txt  2026-04-17-http3-results.txt  2026-04-18-http3-results.txt  README.md  build_h2load.sh  comparison.txt  plot_packets.py  run_server_shootout.sh  view_results.py
benchmark/idl/: benchmark.capnp  benchmark.proto  nprpc_benchmark.npidl
benchmark/src/: benchmark_bandwidth.cpp  benchmark_capnp_latency.cpp  benchmark_concurrent.cpp  benchmark_grpc_latency.cpp  benchmark_latency.cpp  benchmark_main.cpp  benchmark_server.cpp  benchmark_throughput.cpp  capnp_server.cpp  common.hpp  grpc_server.cpp  server.cpp
check/: CMakeLists.txt
check/src/: check_size.cpp
examples/: CMakeLists.txt  CMakeLists.txt.example  router.config.json
examples/live-blog/: CMakeLists.txt  README.md  gen_stubs.py
examples/live-blog/client/: .gitignore  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
examples/live-blog/client/src/: app.css
examples/live-blog/cpp/: main.cpp
examples/live-blog/idl/: live_blog.npidl
examples/live-blog/media/: post-101.fmp4  post-101.mpd
examples/live-blog/scripts/: build-swift-server.sh  docker-sourcekit-lsp.sh  gen_stubs.py  run-swift-server.sh
examples/live-blog/server/: .gitignore  Package.swift  README.md
examples/live-blog/server/idl/: live_blog.npidl
examples/live-blog/server/scripts/: gen_stubs.sh
examples/live-blog/swift/: .gitignore  .gitkeep  Package.swift  README.md
examples/ssr-svelte-app/: CMakeLists.txt  docker-sourcekit-lsp.sh
examples/ssr-svelte-app/client/: CMakeLists.txt  package-lock.json  package.json  svelte.config.js  vite.config.ts
examples/ssr-svelte-app/server/: CMakeLists.txt
npidl/: CMakeLists.txt  DEPENDENCY_INJECTION_DESIGN.md  ERROR_RECOVERY.md  IMPORTS_ARCHITECTURE.md  LSP_PROTOCOL_NOTES.md  LSP_README.md  POSITION_TRACKING.md  TODO.md  emacs-lsp-config.el  neovim-lsp-config.lua  npidl-mode.el  npidl.vcxproj  npidl.vcxproj.filters
npidl/docs/: ARGUMENTS_BUILDER_REFACTORING.md  GOTO_DEFINITION_IMPLEMENTATION.md  IMPORT_CONTEXT_STACK.md  LEXER_PARSER_ARCHITECTURE.md  LSP_POSITION_LOOKUP.md  LSP_README.md  POSITION_TRACKING.md  REFACTORING_NOTES.md  SEMANTIC_TOKENS_IMPLEMENTATION.md
npidl/post_build/: check_size.cpp
npidl/src/: arguments_builder.cpp  arguments_builder.hpp  ast.hpp  builder.cpp  builder.hpp  builtins.hpp.in  check_size.cpp  compilation.cpp  context.cpp  cpp_builder.cpp  cpp_builder.hpp  lexer_parser_interfaces.hpp  library.cpp  lsp_server.cpp  lsp_server.hpp  main.cpp  namespace.cpp  null_builder.hpp  parse_for_lsp.hpp  parser_factory.cpp  parser_factory.hpp  parser_implementations.cpp  parser_implementations.hpp  parser_interface.hpp  parser_interfaces.hpp  position_index.hpp  position_index_builder.hpp  source_location.hpp  swift_builder.cpp  swift_builder.hpp  ts_builder.cpp  ts_builder.hpp  utils.cpp  utils.hpp  workspace_manager.cpp  workspace_manager.hpp
npidl/src/boost/: README.md
npidl/test/: CMakeLists.txt  README.md  TESTING.md
npidl/test/integration_tests/: debug_index.py  debug_stderr.py  decode_tokens.py  lsp_test_base.py  run_lsp_tests.py  test_bad_import.npidl  test_diagnostic_ranges.py  test_diagnostics.py  test_fixed.py  test_goto_alias.py  test_goto_definition.py  test_goto_param.npidl  test_goto_param_fixed.npidl  test_import_types.npidl  test_lsp_features.py  test_module_reject.npidl  test_param_goto.py  test_parser_errors.npidl  test_raw_diagnostics.py  test_semantic_tokens.py
npidl/test/scripts/: test_error_recovery.sh  test_errors.npidl  test_import_main.npidl  test_lsp.sh  test_module_reject.npidl  test_semantic_tokens.sh
npidl/test/src/: main.cpp
npidl/vscode-extension/: ICON.md  QUICKSTART.md  README.md  language-configuration.json  package-lock.json  package.json  setup.sh
npidl/vscode-extension/src/: extension.ts
npidl/vscode-extension/syntaxes/: npidl.tmLanguage.json
npidl_post_build_check/: CMakeLists.txt
npidl_post_build_check/src/: check_size.cpp
npquicrouter/: CMakeLists.txt  Dockerfile.debian12  README.md  build-vps.sh  npquicrouter-linux-amd64
npquicrouter/src/: main.cpp  quic_initial.hpp  quic_reuseport_router.bpf.c  quic_shm_channel.hpp  sni_parser.hpp
nprpc_swift/Examples/: CMakeLists.txt  FluentBuilderExample.swift  run_http3_server.sh  shape_server.cpp
nprpc_swift/Examples/HTTP3Server/: main.swift
test/: CMakeLists.txt  forward_address.ps1  test_http3_rpc.sh  test_http_rpc.sh
test/http/: index.html
test/idl/: nprpc_test.npidl  test.npidl  test_udp.npidl
test/js/: .mocharc.json  CMakeLists.txt  README.md  package-lock.json  package.json  run_tests.sh  webpack.browser.config.js
test/js/test/: basic.test.ts  http3-fetch-polyfill.ts  mocha-global.ts  nprpc-integration.test.ts  nprpc.test.ts  server-manager.ts  websocket-polyfill.test.ts  webtransport-browser.test.ts
test/src/: basic.cpp  concurrent.cpp  main.cpp  server.cpp  streams.cpp  test_clean_up.cpp  test_http_utils.cpp  test_lock_free_ring_buffer.cpp  test_shared_memory_endpoint.cpp  test_shared_memory_listener.cpp  test_variant.cpp
test/src/common/: helper.inl
(+316 files in other folders)
